Add stored errors.
In case an error is set before there is an error handler, it must be stored
until the handler is set up.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(TARGET safl)
 add_library(${TARGET}
     include/safl/detail/FunctionTraits.h
     include/safl/detail/FutureDetail.h
+    include/safl/detail/Utils.h
     include/safl/Future.h
     include/safl/ToFuture.h
     src/safl/Future.cpp
