--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ add_library(${TARGET}
     include/safl/detail/FunctionTraits.h
     include/safl/detail/FutureDetail.h
     include/safl/detail/Utils.h
+    include/safl/detail/ErrorHandling.h
+    include/safl/detail/Context.h
     include/safl/Future.h
     include/safl/ToFuture.h
     src/safl/Future.cpp
