Integrate README.md to Doxygen.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# This file is a part of Standalone Future Library (safl).
+# This file is a part of Stand-alone Future Library (safl).
 #
 
 cmake_minimum_required(VERSION 3.3)
