Started the Specification.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -2,6 +2,8 @@
 # This file is a part of Stand-alone Future Library (safl).
 #
 
+option(SAFL_DEVELOPER "Enable the developer mode" ON)
+
 find_package(Doxygen)
 if(NOT DOXYGEN_FOUND)
     return()
@@ -12,8 +14,13 @@ find_program(QHELPGENERATOR_EXECUTABLE
     qhelpgenerator
     qhelpgenerator-qt5
 )
-if(NOT QHELPGENERATOR_EXECUTABLE)
-    unset(QHELPGENERATOR_EXECUTABLE CACHE)
+if(QHELPGENERATOR_EXECUTABLE)
+    set(SAFL_DOXY_GENERATE_QHP YES)
+    set(SAFL_DOXY_QHG_LOCATION ${QHELPGENERATOR_EXECUTABLE})
+endif()
+
+if(SAFL_DEVELOPER)
+    set(SAFL_DOXY_INTERNAL_DOCS YES)
 endif()
 
 configure_file(Doxyfile.in Doxyfile @ONLY)
@@ -23,7 +30,9 @@ add_custom_target(doc
   WORKING_DIRECTORY
     ${CMAKE_CURRENT_BINARY_DIR}
   SOURCES
+    SaflDoxygen.css
     pages/MainPage.dox
+    pages/Specification.dox
   COMMENT
     "Generating SAFL documentation"
   VERBATIM
