--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -23,10 +23,11 @@ HTML_COLORSTYLE_SAT    = 141
 HTML_COLORSTYLE_GAMMA  = 91
 HTML_TIMESTAMP         = YES
 HTML_DYNAMIC_MENUS     = NO
+HTML_EXTRA_STYLESHEET  = @PROJECT_SOURCE_DIR@/doc/SaflDoxygen.css
 
-GENERATE_QHP           = YES
+GENERATE_QHP           = @SAFL_DOXY_GENERATE_QHP@
 QCH_FILE               = ../safl.qch
-QHG_LOCATION           = @QHELPGENERATOR_EXECUTABLE@
+QHG_LOCATION           = @SAFL_DOXY_QHG_LOCATION@
 
 GENERATE_LATEX         = NO
 GENERATE_LATEX         = NO
@@ -35,8 +36,11 @@ GENERATE_MAN           = NO
 GENERATE_XML           = NO
 GENERATE_DOCBOOK       = NO
 
-INTERNAL_DOCS          = YES
+INTERNAL_DOCS          = @SAFL_DOXY_INTERNAL_DOCS@
 HIDE_UNDOC_MEMBERS     = YES
 HIDE_UNDOC_CLASSES     = YES
 HAVE_DOT               = YES
 SHOW_FILES             = NO
+AUTOLINK_SUPPORT       = NO
+
+ALIASES                = safl{1}="@ref safl::\1 \"\1\""
