--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 cmake_minimum_required(VERSION 3.3)
-project(SAFL VERSION 0.1 LANGUAGES CXX)
+project(SAFL VERSION 0.1 LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 14)
 add_compile_options(
