Update memory management.
* Delete all contexts.
* No memory leaks.
* Check for leaks in unit-tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ add_compile_options(
     -Wold-style-cast
 )
 
+option(SAFL_DEVELOPER "Enable the developer mode" ON)
+
 enable_testing()
 
 add_subdirectory(doc)
