--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,9 @@ find_package(Threads REQUIRED)
 
 set(TEST_TARGET ut-safl)
 add_executable(${TEST_TARGET}
-    src/Tests.cpp
+    src/SaflTests.cpp
+    src/TraitsTests.cpp
+    src/Testing.h
 )
 target_include_directories(${TEST_TARGET}
   PRIVATE
@@ -19,4 +21,17 @@ target_link_libraries(${TEST_TARGET}
     Threads::Threads
     safl
 )
+
+# Tests for the CommonAPI extension:
+if(SAFL_EXT_ENABLE_CAPI)
+    target_sources(${TEST_TARGET}
+      PRIVATE
+        src/CapiTests.cpp
+    )
+    target_link_libraries(${TEST_TARGET}
+      PRIVATE
+        safl-capi
+    )
+endif()
+
 GTEST_ADD_TESTS(${TEST_TARGET} "" AUTO)
