--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,7 @@
 set(TARGET ${PROJECT_NAME})
 add_library(${TARGET}
     include/safl/detail/Context.h
+    include/safl/detail/DebugContext.h
     include/safl/detail/ErrorHandling.h
     include/safl/detail/FunctionTraits.h
     include/safl/detail/FutureDetail.h
@@ -12,7 +13,8 @@ add_library(${TARGET}
     include/safl/Executor.h
     include/safl/Future.h
     include/safl/ToFuture.h
-    src/safl/Future.cpp
+    src/safl/detail/Context.cpp
+    src/safl/detail/DebugContext.cpp
 )
 target_include_directories(${TARGET}
   PUBLIC
