--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,23 +3,38 @@
 #
 
 find_package(GTest REQUIRED)
-find_package(Threads REQUIRED)
+enable_testing()
 
-set(TEST_TARGET ut-safl)
+set(TEST_LIBRARY safl-testing)
+add_library(${TEST_LIBRARY}
+    src/safl/Testing.cpp
+    include/safl/Testing.h
+)
+target_include_directories(${TEST_LIBRARY}
+  PUBLIC
+    include
+    ${GTEST_INCLUDE_DIRS}
+)
+target_link_libraries(${TEST_LIBRARY}
+  PUBLIC
+    ${GTEST_BOTH_LIBRARIES}
+    ${PROJECT_NAME}
+)
+
+set(TEST_TARGET ut-${PROJECT_NAME})
 add_executable(${TEST_TARGET}
     src/SaflTests.cpp
-    src/TraitsTests.cpp
     src/Testing.h
-)
-target_include_directories(${TEST_TARGET}
-  PRIVATE
-    ${GTEST_INCLUDE_DIRS}
+    src/TraitsTests.cpp
 )
 target_link_libraries(${TEST_TARGET}
   PRIVATE
-    ${GTEST_BOTH_LIBRARIES}
-    Threads::Threads
-    safl
+    ${TEST_LIBRARY}
 )
 
-GTEST_ADD_TESTS(${TEST_TARGET} "" AUTO)
+gtest_add_tests(
+  TARGET
+    ${TEST_TARGET}
+  TEST_PREFIX
+    ${PROJECT_NAME}.
+)
