--- a/libs/safl/CMakeLists.txt
+++ b/libs/safl/CMakeLists.txt
@@ -2,19 +2,7 @@
 # This file is a part of Stand-alone Future Library (safl).
 #
 
-# Use clang-tidy if available:
-find_program(CLANG_TIDY_EXECUTABLE
-  NAMES
-    clang-tidy
-)
-if(CLANG_TIDY_EXECUTABLE)
-    set(CMAKE_CXX_CLANG_TIDY
-        ${CLANG_TIDY_EXECUTABLE}
-        -checks=-*,performance*,readability*,misc*,modernize*
-    )
-endif()
-
-set(TARGET ${PROJECT_NAME})
+set(TARGET safl)
 add_library(${TARGET}
     include/safl/Composition.h
     include/safl/Executor.h
@@ -40,9 +28,3 @@ target_compile_features(${TARGET}
   PUBLIC
     cxx_lambda_init_captures # this enforces c++14 or later
 )
-if(SAFL_DEVELOPER)
-    target_compile_definitions(${TARGET}
-      PUBLIC
-        -DSAFL_DEVELOPER
-    )
-endif()
