--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,23 +7,18 @@ find_program(CLANG_TIDY_EXECUTABLE
   NAMES
     clang-tidy
 )
-if(CLANG_TIDY_EXECUTABLE)
-    set(CMAKE_CXX_CLANG_TIDY
-        ${CLANG_TIDY_EXECUTABLE}
-        -checks=-*,performance*,readability*,misc*,modernize*
-    )
-endif()
-
-# Build the main library:
-add_subdirectory(safl)
-
-# Build extensions:
-function(add_extension SUBDIR EXT_NAME SUMMARY ENABLED_BY_DEFAULT)
-    set(EXT_OPTION SAFL_ENABLE_${EXT_NAME})
-    option(${EXT_OPTION} "Enable the ${SUMMARY}" ${ENABLED_BY_DEFAULT})
-    if(${EXT_OPTION})
-        add_subdirectory(${SUBDIR})
+macro(safl_use_clang_tidy TARGET)
+    if(CLANG_TIDY_EXECUTABLE)
+        set(CLANG_TIDY_COMMAND ${CLANG_TIDY_EXECUTABLE}
+                          -checks=-*,performance*,readability*,misc*,modernize*)
+        set_target_properties(${TARGET}
+          PROPERTIES
+            CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}"
+        )
     endif()
-endfunction()
+endmacro()
 
-add_extension(safl-qt QT "integration with Qt" ON)
+# Build libraries:
+add_subdirectory(testing)
+add_subdirectory(core)
+add_subdirectory(extensions)
