Add "make install".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,42 @@ add_custom_target(${PROJECT_NAME}-extra-files
     README.md
     LICENSE
 )
+
+# Installation:
+include(CMakePackageConfigHelpers)
+
+set(SAFL_INSTALL_CMAKE_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/safl-${PROJECT_VERSION})
+set(SAFL_CMAKE_DIR ${CMAKE_CURRENT_BINARY_DIR}/cmake)
+set(SAFL_VERSION_CMAKE ${SAFL_CMAKE_DIR}/SaflConfigVersion.cmake)
+set(SAFL_CONFIG_CMAKE ${SAFL_CMAKE_DIR}/SaflConfig.cmake)
+
+write_basic_package_version_file(
+    ${SAFL_VERSION_CMAKE} COMPATIBILITY SameMajorVersion
+)
+
+configure_package_config_file(
+    cmake/ProjectConfig.cmake.in
+    ${SAFL_CONFIG_CMAKE}
+  INSTALL_DESTINATION
+    ${SAFL_INSTALL_CMAKE_DIR}
+)
+
+export(
+  EXPORT
+    SaflTargets
+  FILE
+    ${SAFL_CMAKE_DIR}/SaflTargets.cmake
+)
+install(
+  FILES
+    ${SAFL_VERSION_CMAKE}
+    ${SAFL_CONFIG_CMAKE}
+  DESTINATION
+    ${SAFL_INSTALL_CMAKE_DIR}
+)
+install(
+  EXPORT
+    SaflTargets
+  DESTINATION
+    ${SAFL_INSTALL_CMAKE_DIR}
+)
